Iterator applied to closeQueueAndReallocate and changed dequeue method